--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
   margin: 0;
 }
 
+body.hideScroll {
+  overflow: hidden;
+}
+
 
 a {
   color: #ff5e84;
@@ -39,7 +43,7 @@ p, .description {
 
 #intro {
   width: 300px;
-  margin-right: 20px;
+  margin-right: 96px;
 }
 
 main {
@@ -84,8 +88,18 @@ button.fat {
   
 }
 
-button.fat:hover {
+button.fat a {
+  
+  color: white;
   text-decoration: none;
+ 
+  
+}
+
+button.fat:hover {
+  background-color: #0984e3;
+  text-decoration: none;
+  transition: 800ms;
   
 }
 
@@ -150,6 +164,10 @@ footer a {
   display: flex;
   justify-content: center;
   transition: 400ms;
+}
+
+#modal.addScroll{
+  overflow: auto;
 }
 
 #modal .content {
@@ -263,4 +281,98 @@ form button:hover {
   visibility: hidden;
   
 
+}
+
+/* IDEAD.HTML */
+
+#page-ideas #container {
+  display: block;
+}
+
+#page-ideas header{
+  display: flex;
+  justify-content: space-between;
+}
+
+#page-ideas nav {
+  display: flex;
+  align-items: center;
+  
+}
+
+#page-ideas nav li {
+  margin-right: 16px;
+  list-style: none;
+  
+}
+
+#page-ideas nav li a {
+  color: #25282b;
+}
+
+#page-ideas nav li:last-child {
+  margin: 0;
+
+}
+
+#page-ideas nav li:last-child a {
+
+  background-color: #ff5e84;
+  color: white;
+
+  width: 150px;
+  height: 40px;
+
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+  transition: 800ms;
+  cursor: pointer;
+
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: bold;
+ 
+}
+
+#page-ideas nav li:last-child a:hover {
+  background-color: #0984e3;
+  
+}
+
+#page-ideas section#title {
+
+  text-align: center;
+
+}
+
+#page-ideas section#title p {
+  opacity: 0.8;
+  margin: 0;
+
+}
+
+#page-ideas section#title h1 {
+  text-transform: uppercase;
+  font-size: 28px;
+  margin: 0;
+}
+
+#page-ideas section#ideas {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  gap: 20px
+}
+
+#page-ideas section#ideas .idea {
+  margin: 0;
+}
+
+#page-ideas section#title,
+#page-ideas section#ideas,
+#page-ideas footer {
+  margin-top: 64px;
 }
