--- a/views/ideias.html
+++ b/views/ideias.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Casa Criativa</title>
+{% extends "layout.html" %}
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  {% block title %}
+   <title>Ideias - Casa Criativa</title>
+  {% endblock %}
 
-</head>
-<body id="page-ideas">
-  
-  <div id="container">
+  {% set bodyId = "page-ideas" %}
 
+{% block content %}
     <header>
       <a href="/">
         <img src="/logo.png" alt="Logomarca">
@@ -42,140 +36,13 @@
 
       <section id="ideas">
   
-        <div class="idea">
-    
-          <img 
-          src="https://image.flaticon.com/icons/svg/2729/2729007.svg" 
-          alt="Imagem Curso de Programação"
-          >
-    
-          <div class="content">
-            <h3>Cursos de Programação</h3>
-            <p>Estudo</p>
-            <div class="description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates nihil quae, modi iusto non, unde vitae inventore omnis blanditiis fuga in consectetur pariatur doloribus. Corporis recusandae quam inventore officia ea?
-            </div>
-            <a href="#">Ir para a ideia</a>
-          </div>
-    
-        </div>
-    
-        <div class="idea">
-    
-          <img 
-          src="https://image.flaticon.com/icons/svg/2729/2729005.svg" 
-          alt="Imagem Exercícios"
-          >
-    
-          <div class="content">
-            <h3>Exercícios</h3>
-            <p>Saúde</p>
-            <div class="description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates nihil quae, modi iusto non, unde vitae inventore omnis blanditiis fuga in consectetur pariatur doloribus. Corporis recusandae quam inventore officia ea?
-            </div>
-            <a href="#">Ir para a ideia</a>
-          </div>
-    
-        </div>
-    
-        <div class="idea">
-    
-          <img 
-          src="https://image.flaticon.com/icons/svg/2729/2729027.svg" 
-          alt="Imagem Meditação"
-          >
-    
-          <div class="content">
-            <h3>Meditação</h3>
-            <p>Mentalidade</p>
-            <div class="description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates nihil quae, modi iusto non, unde vitae inventore omnis blanditiis fuga in consectetur pariatur doloribus. Corporis recusandae quam inventore officia ea?
-            </div>
-            <a href="#">Ir para a ideia</a>
-          </div>
-    
-        </div>
-
-        <div class="idea">
-    
-          <img 
-          src="https://image.flaticon.com/icons/svg/2729/2729076.svg" 
-          alt="Imagem Series"
-          >
-    
-          <div class="content">
-            <h3>Maratonar Séries</h3>
-            <p>Lazer</p>
-            <div class="description">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates nihil quae, modi iusto non, unde vitae inventore omnis blanditiis fuga in consectetur pariatur doloribus. Corporis recusandae quam inventore officia ea?
-            </div>
-            <a href="#">Ir para a ideia</a>
-          </div>
-    
-        </div>
-    
+          {% include "all_ideas.html" %}
+        
       </section>
 
     </main>
    
   
-    <footer>
-      Com ❤ <a href="http://rocketseat.com.br" target="_blank">Rocketseat</a>
-    </footer>
+    {% include "footer.html"  %}
 
-  </div>
-
-
-    <div id="modal" class="hide">
-
-    <div class="content">
-
-      <h1>Nova Ideia</h1>
-
-      <form action="">
-
-        <div class="input-wrapper">
-
-          <label for="title">Título da Ideia</label>
-          <input type="text" name="title">
-
-        </div>
-
-        <div class="input-wrapper">
-          <label for="category">Categoria</label>
-          <input type="text" name="category">
-        </div>
-
-        <div class="input-wrapper">
-          <label for="image">Link da Imagem</label>
-          <input type="url" name="link">
-        </div>
-
-        <div class="input-wrapper">
-          <label for="description">Descrição da Ideia</label>
-          <textarea name="description" cols="30" rows="5"></textarea>
-        </div>
-
-        <div class="input-wrapper">
-          <label for="link">Link da ideia</label>
-          <input type="url" name="link">
-        </div>        
-
-        <a href="#" onclick="onOff()">Voltar</a>
-        <button>Salvar</button>
-
-      </form>
-
-    </div>
-
-
-  
-
-
-
-  <script src="scripts.js"></script>
-
-  </div>
-  
-</body>
-</html>
+    {% endblock %}
