--- a/views/modal.html
+++ b/views/modal.html
@@ -4,7 +4,7 @@
 
     <h1>Nova Ideia</h1>
 
-    <form action="">
+    <form action="/" method="POST" onsubmit=" return checkFields(event)" >
 
       <div class="input-wrapper">
 
@@ -20,7 +20,7 @@
 
       <div class="input-wrapper">
         <label for="image">Link da Imagem</label>
-        <input type="url" name="link">
+        <input type="url" name="image">
       </div>
 
       <div class="input-wrapper">
@@ -30,7 +30,7 @@
 
       <div class="input-wrapper">
         <label for="link">Link da ideia</label>
-        <input type="url" name="link">
+        <input type="url" name="url">
       </div>        
 
       <a href="#" onclick="onOff()">Voltar</a>
